# websocket

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md  conanfile.txt  your_cert.pem  your_private_key.pem
src/Logger/: Log.cpp  Log.h
src/TestApp/: HttpClient.cs  Program.cs  TestApp.cs  TestAppForm.Designer.cs  TestAppForm.cs  Websocket.cs
src/WebSocketServer/: FBSHandler.cpp  FBSHandler.h  HttpHandler.cpp  HttpHandler.h  main.cpp  server.cpp  server.h  utils.h
